<resources>
    <string name="app_name">Github User</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>

    <string name="fav_title">Favorite User</string>
    <string name="set_title">Settings</string>

    <string name="username_placeholder">Username</string>
    <string name="name_placeholder">Name</string>
    <string name="location_placeholder">Location</string>
    <string name="repository_placeholder">Repository</string>
    <string name="company_placeholder">Company</string>
    <string name="followers_placeholder">Followers</string>
    <string name="following_placeholder">Following</string>

    <string name="dark_mode">Dark Mode</string>
</resources>